# Nachhaltigkeit-und-Digitalisierung

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: baseline-zscore.md  eda-quickcheck.md  fetch-context.md  sync-konzept.md
.claude/skills/anomalie-methodenwahl/: SKILL.md
.claude/skills/external-data-apis/: SKILL.md
.claude/skills/paper-poster-thws/: SKILL.md
.claude/skills/smart-meter-eda/: SKILL.md
.streamlit/: config.toml
app/: cost_first.py  dashboard.py  data_access.py  method_meta.py  styling.py
backend/: README.md
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: anomalies.py  stats.py
backend/app/services/: cost_calculator.py  data_loader.py
backend/tests/: test_api.py
config/: config.yaml  dashboard.yaml  recommendations.yaml  sites.yaml
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/app/anomaly/[id]/: page.tsx
dashboard/app/research/: page.tsx
dashboard/components/dashboard/: AnalysisCards.tsx  AnomalyCard.tsx  AnomalyDetailView.tsx  AnomalyList.tsx  CostCard.tsx  EnsembleCard.tsx  FilterBar.tsx  FilterBarLoader.tsx  Header.tsx  LoadChart.tsx  ResearchView.tsx  SeverityBadge.tsx
dashboard/lib/: api.ts  format.ts
dashboard/types/: anomaly.ts
data/: SCHEMA.md
docs/: CLAUDE_patch_v4.md  SETUP.md  _md2pdf.py
docs/calls/: marja_2026_05_26_briefing.md
docs/konzept/: datenprofil.md  konzept.md  methodenwahl_defense.md
docs/poster/: poster_outline.md
docs/setup/: global_CLAUDE_template.md
notebooks/: 01_eda.ipynb  02_features.ipynb  03_baseline_zscore.ipynb  04_segments.ipynb  05_methods_smoke.ipynb  06_method_comparison.ipynb  _build_01_eda.py  _build_02_features.py  _build_03_baseline_zscore.py  _build_04_segments.py  _build_05_methods_smoke.py  _build_06_method_comparison.py  _build_07_llm_evaluation.py
paper/: 00_outline.md  01_einleitung.md  02_stand_der_technik.md  03_methodik.md  04_ergebnisse.md  05_diskussion.md  06_fazit.md  _build_paper.py  _build_poster.py  paper.docx  paper.md  poster.pptx  poster_A1.pptx  poster_outline.md  references.bib
reports/: llm_recommendations.csv  llm_recommendations_REVIEW.md  methodology.md  site_plz_mapping.md
reports/annotation/: README.md  annotation.csv
reports/llm_evaluation/: full_context_samples.md  variant_comparison.md
reports/llm_recommendations/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+26 more)
reports/tables/: 06_method_comparison.md  06_sweep_flag_rates.csv  ensemble_coverage.csv
scripts/: dump_full_context_samples.py  ensemble_coverage.py  run_llm_pipeline.py  run_variant_comparison.py
src/anomaly/: zscore.py
src/apis/: __init__.py  dwd.py  epex.py  fetch_context.py
src/eda/: __init__.py  loader.py  profile.py
src/rausch_energy_anomaly/: __init__.py
src/rausch_energy_anomaly/diagnosis/: __init__.py
src/rausch_energy_anomaly/evaluation/: export_annotation.py  method_comparison.py  scoring.py
src/rausch_energy_anomaly/features/: __init__.py  segments.py  stl_decompose.py
src/rausch_energy_anomaly/ingestion/: __init__.py  brightsky.py  energy_charts.py  fetch_context.py  rlm_loader.py
src/rausch_energy_anomaly/models/: arima_clustered.py  autoencoder.py  clustering_daily.py  clustering_segments.py
tests/: conftest.py  test_arima_clustered.py  test_autoencoder.py  test_clustering.py  test_context.py  test_dashboard_smoke.py  test_loader.py  test_method_comparison.py  test_scoring.py  test_segments.py  test_stl_decompose.py  test_zscore.py
(+7 files in other folders)
