[project]
name = "datenwerkios-anomalie"
version = "0.1.0"
description = "KI-gestützte Anomalieerkennung in Smart-Meter-Daten"
requires-python = ">=3.11"
dependencies = [
    # Daten
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",          # Parquet-Support
    # ML
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    # Plot
    "matplotlib>=3.8",
    "plotly>=5.20",
    "seaborn>=0.13",
    # APIs
    "httpx>=0.27",
    "tenacity>=8.2",        # Retry-Logik
    "python-dotenv>=1.0",
    # Notebooks
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
    # Utility
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "openpyxl>=3.1.5",
    "holidays>=0.97",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "pytest>=8.0",
]
dashboard = [
    "streamlit>=1.33",
]
deep = [
    # Optional, falls wir LSTM/Autoencoder doch noch machen
    "torch>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
