[project]
name = "rausch-energy-anomaly"
version = "0.1.0"
description = "KI-gestützte Anomalieerkennung in RLM-Lastgangdaten (Rausch / THWS)"
requires-python = ">=3.11"
dependencies = [
    # Daten
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",          # Parquet-Support
    # ML (klassisch)
    "scikit-learn>=1.4",
    "statsmodels>=0.14",    # STL, SARIMAX
    "joblib>=1.3",          # Modell-Persistenz
    # Plot
    "matplotlib>=3.8",
    "plotly>=5.20",
    "seaborn>=0.13",
    # APIs
    "httpx>=0.27",
    "tenacity>=8.2",        # Retry-Logik
    "python-dotenv>=1.0",
    # Notebooks
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
    # Utility
    "tqdm>=4.66",
    "pyyaml>=6.0",          # config/*.yaml
    "openpyxl>=3.1.5",      # Excel-Loader
    "holidays>=0.97",       # Feiertage (Default BY)
    "markdown>=3.10.2",     # Doku -> PDF
    "fpdf2>=2.8.7",
    "pmdarima>=2.1.1",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
    "fastapi>=0.136.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",            # Lint + Format
    "mypy>=1.10",           # --strict
    "pytest>=8.0",
    "pytest-cov>=5.0",      # Coverage > 70 %
    "python-docx>=1.2",     # Paper-Generierung (paper/_build_paper.py)
    "python-pptx>=1.0",     # Poster-Generierung (paper/_build_poster.py)
]
dashboard = [
    "streamlit>=1.33",
]
deep = [
    # Hauptmethode B: Autoencoder (Dense + LSTM). Schwer/groß -> separat installieren:
    #   uv sync --extra deep
    # TF 2.16 + tf-keras (Keras 2) statt TF 2.21 + Keras 3: löst den macOS-fit-Hang
    # auf realer Datengröße (s. autoencoder.py-Modulkommentar). Beide Versionen
    # exakt gepinnt, weil tf-keras-Versionen 1:1 an TF-Versionen koppeln.
    "tensorflow==2.16.2",
    "tf-keras==2.16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
# Drittbibliotheken ohne Typstubs nicht als Fehler werten
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# --capture=sys: fd-level-Capture aus -> TensorFlow schreibt seine stderr-Flut nicht in
# eine von pytest gekaperte Pipe (sonst Thread-Deadlock). -m 'not slow': konvergenz-
# abhängige Tests im Default ausschließen.
addopts = "-q --capture=sys -m 'not slow'"
markers = ["slow: langsame, konvergenzabhängige Tests (Default ausgeschlossen)"]

[tool.coverage.run]
source = ["src/rausch_energy_anomaly"]
